[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymt"
description = "The CSDMS Python Modeling Toolkit"
authors = [
  {email = "mcflugen@gmail.com"},
  {name = "The CSDMS team"}
]
maintainers = [
  {email = "mcflugen@gmail.com"},
  {name = "The CSDMS team"}
]
keywords = ["earth science", "model coupling"]
license = {file = "LICENSE.rst"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
  "click",
  "deprecated",
  "gimli.units",
  "jinja2",
  "landlab >= 2",
  "matplotlib",
  "model_metadata >= 0.7",
  "netcdf4",
  "numpy",
  "pyyaml",
  "scipy",
  "shapely",
  "xarray",
]
dynamic = ["readme", "version"]

[project.urls]
homepage = "https://csdms.colorado.edu"
documentation = "https://pymt.readthedocs.io"
repository = "https://github.com/csdms/pymt"
changelog = "https://github.com/csdms/pymt/blob/develop/CHANGELOG.rst"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "zest.releaser[recommended]"
]
docs = [
  "pandoc",
  "nbformat",
  "jupyter_client",
  "ipython",
  "sphinx >= 1.5.1",
  "sphinx_rtd_theme",
  "tornado",
  "entrypoints",
  "nbsphinx >= 0.2.12",
]
testing = [
  "h5netcdf",
  "pytest",
  "pytest-benchmark",
  "pytest-cov",
  "pytest-datadir",
  "pytest-mypy",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "AUTHORS.rst", "CHANGELOG.rst"]}
version = {attr = "pymt._version.__version__"}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["notebooks", "pymt", "tests"]
norecursedirs = [".*", "*.egg*", "build", "dist"]
addopts = """
  --tb native
  --strict-markers
  --durations 16
  --doctest-modules
  -vvv
"""
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ALLOW_UNICODE"
]
markers = """
    slow: marks tests as slow (deselect with '-m "not slow"')
    notebook: marks tests as notebook (deselect with '-m "not notebook"')
"""

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.towncrier]
directory = "news"
package = "pymt"
filename = "CHANGELOG.rst"
single_file = true
underlines = "-`^"
issue_format = "`#{issue} <https://github.com/csdms/pymt/issues/{issue}>`_"
title_format = "{version} ({project_date})"

[[tool.towncrier.type]]
directory = "notebook"
name = "New Tutorial Notebooks"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documentation Enhancements"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Other Changes and Additions"
showcontent = true

