[metadata]
name = pymt
version = 1.3.2.dev0
description = The CSDMS Python Modeling Toolkit
long_description = file: README.rst, AUTHORS.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
keywords = earth science, model coupling
author = Eric Hutton
author_email = huttone@colorado.edu
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Physics
url = https://csdms.colorado.edu
project_urls =
    Source Code = https://github.com/csdms/pymt

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    click
    deprecated
    jinja2
    landlab >=2
    matplotlib
    model_metadata >=0.7
    netcdf4
    numpy
    pyyaml
    scipy
    shapely
    six
    xarray

[options.entry_points]
console_scripts =
    cmt-config = cmt.cmd.cmt_config:main

[options.packages.find]
exclude = tests*

[flake8]
exclude = docs
ignore =
	E203
	E501
	W503
max-line-length = 88

[zest.releaser]
tag-format = v{version}

[tool:changelog]
force = true
changelog_name = CHANGELOG
project_slug = csdms/pymt
remote_end_point = https://github.com

[coverage:run]
relative_files = True
